--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ sourceCompatibility = 1.7
 version = '0.1-SNAPSHOT'
 group = 'com.aajtech.hr'
 
-def appengineVersion = "1.9.19"
+def appengineVersion = "1.9.20"
 def vaadinVersion = "7.4.3"
 
 repositories {
@@ -92,6 +92,8 @@ dependencies {
 	compile 'javax.inject:javax.inject:1'
 	compile "javax.servlet:servlet-api:2.5"
 	compile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
+	compile 'com.google.oauth-client:google-oauth-client-appengine:1.20.0'
+	compile 'com.google.http-client:google-http-client-gson:1.20.0'
 	runtime 'org.datanucleus:datanucleus-accessplatform-jpa-rdbms:3.1.3'
 	runtime 'org.datanucleus:datanucleus-enhancer:3.1.1'
 }
