--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,8 @@ dependencies {
 	compile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
 	compile 'com.google.oauth-client:google-oauth-client-appengine:1.20.0'
 	compile 'com.google.http-client:google-http-client-gson:1.20.0'
+	compile 'org.apache.poi:poi-ooxml:3.12'
+	compile 'org.apache.poi:poi-scratchpad:3.12'
 	runtime 'org.datanucleus:datanucleus-accessplatform-jpa-rdbms:3.1.3'
 	runtime 'org.datanucleus:datanucleus-enhancer:3.1.1'
 }
