--- a/build.gradle
+++ b/build.gradle
@@ -96,6 +96,7 @@ dependencies {
 	compile 'com.google.http-client:google-http-client-gson:1.20.0'
 	compile 'org.apache.poi:poi-ooxml:3.12'
 	compile 'org.apache.poi:poi-scratchpad:3.12'
+	compile 'org.codehaus.groovy:groovy:2.4.3'
 	runtime 'org.datanucleus:datanucleus-accessplatform-jpa-rdbms:3.1.3'
 	runtime 'org.datanucleus:datanucleus-enhancer:3.1.1'
 }
